Fix bad alignment and some small UI improvements

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -1,30 +1,28 @@
 :root {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    -webkit-tap-highlight-color: transparent;
+    scroll-behavior: smooth;
 }
 
 /* Category: Text */
 h1.title {
     text-align: inherit;
-    width: 100vw;
     margin-top: 2em;
     margin-bottom: 2em;
 }
 
 p.foodResultText {
-    width: 100vw;
     visibility: hidden;
 }
 
 /* Category: Div */
 div.buttons {
     text-align: inherit;
-    width: 100vw;
 }
 
 div.foodSpinner {
     text-align: inherit;
-    width: 100vw;
     height: min-content;
     min-height: 30vh;
 }
